Refatorar service